--- a/package.json
+++ b/package.json
@@ -138,6 +138,6 @@
   "codegenConfig": {
     "name": "RNDeviceInfoSpec",
     "type": "modules",
-    "jsSrcsDir": "src"
+    "jsSrcsDir": "src/internal"
   }
 }
