--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "example:ios": "cd FabricExample && yarn ios --simulator 'iPhone 14'",
     "example:ios:build": "cd FabricExample/ios && xcodebuild CC=clang CPLUSPLUS=clang++ LD=clang LDPLUSPLUS=clang++ -workspace example.xcworkspace -configuration Debug -scheme example -sdk iphonesimulator -arch x86_64 ONLY_ACTIVE_ARCH=YES | xcpretty",
     "example:windows": "cd example && yarn windows",
-    "example:packager": "cd example && yarn start",
+    "example:packager": "cd FabricExample && yarn start",
     "test": "jest",
     "precommit": "lint-staged && yarn analyze",
     "build": "bob build",
